Added google maps in job view screen Deleted the postal code field in PersonalDetails class Added lat and lng fields in RecruiterJobPost and RecruiterCompanyInfo class Configured the google map services in iOS and Android

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -31,5 +31,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+       <meta-data android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyCaHYNzsSQ5HllIpifWYFztyIoM8OUzT9M"/>
     </application>
 </manifest>
