--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,14 @@ dependencies:
 
   google_place: ^0.4.7
 
+  google_maps_flutter: ^2.1.3
+
+  flutter_google_places: ^0.3.0
+
+  google_api_headers: ^1.2.0
+
+  google_maps_webservice: ^0.0.19
+
 dev_dependencies:
   # test_api: ^0.4.9
 
